<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Constraint"
        android:layout_marginHorizontal="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titleLogin"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/title_LoginPage"
            android:textSize="24sp"
            android:textStyle="bold"
            app:flow_horizontalAlign="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            app:boxBackgroundColor="@color/white"
            android:id="@+id/textLayoutEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="emailAddress"
                android:gravity="top|start"
                android:hint="@string/email_placeHolder"
                android:inputType="textEmailAddress"
                android:paddingStart="0dp"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:textInputLayoutFocusedRectEnabled="true"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:boxBackgroundColor="@color/white"
            android:id="@+id/textLayoutPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            app:layout_constraintEnd_toEndOf="@+id/textLayoutEmail"
            app:layout_constraintStart_toStartOf="@+id/textLayoutEmail"
            app:layout_constraintTop_toBottomOf="@+id/textLayoutEmail"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPasseword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="password"
                android:gravity="top|start"
                android:hint="@string/passwordHintText"
                android:inputType="textPassword"
                android:paddingStart="0dp"
                android:textAlignment="textStart"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/Loginbutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/loginButton"
            app:cornerRadius="2sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textLayoutPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textLayoutPassword"
            app:layout_constraintTop_toBottomOf="@+id/forgotPass"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/forgotPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forgotPassword"
            android:textStyle="bold"
            android:textColor="#45A7D3"
            app:layout_constraintEnd_toEndOf="@+id/textLayoutPassword"
            app:layout_constraintTop_toBottomOf="@+id/textLayoutPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>